virt01/manual/tools/phpmyadmin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpmyadmin-ingress
  namespace: tools
  annotations:
    ingressClassName: traefik
    cert-manager.io/cluster-issuer: nf-lab
    cert-manager.io/private-key-rotation-policy: Always
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.alpha.kubernetes.io/target: traefik.test.nf.lab
spec:
  rules:
  - host: db.k3s.nf.lab
    http:
      paths:
      - backend:
          service:
            name: phpmyadmin-svc
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - db.k3s.nf.lab
    secretName: phpmyadmin-tls
